# aibackends

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  benchmark_gliner_pii.py  pyproject.toml
benchmarks/: README.md  _reporting.py  benchmark_pii_backends.py  benchmark_runtime_reuse.py  benchmark_tasks.py  run_all.py
benchmarks/reports/: 2026-07-18_pii-gliner.md  2026-07-18_runtime-reuse-llamacpp-gemma4-e2b.md  2026-07-18_runtime-reuse-transformers-gemma3-270m-it.md  2026-07-18_tasks-llamacpp.md  2026-07-18_tasks-transformers.md
docs/: agent-integration.md  architecture.md  batch-processing.md  cli.md  concepts.md  configuration.md  custom-pipelines.md  docker.md  extending.md  index.md  mkdocs.yml  quickstart.md  runtimes.md  tasks.md  usage.md  workflows.md
docs/api-reference/: index.md
docs/releases/: v0.3.0.md
examples/: README.md  list_available.py
examples/agents/: agno_agent.py  crewai_agent.py  langgraph_agent.py  llamaindex_agent.py  openai_agents_sdk.py  pydantic_ai_agent.py
examples/data/: contact_note.txt  contract.txt  invoice.txt  lead_note.txt  meeting_notes.txt  sales_call.txt  support_transcript.txt  video_ad_brief.txt
examples/data/batch/: pii_note_1.txt  pii_note_2.txt  pii_note_3.txt  sales_call_1.txt  sales_call_2.txt
examples/tasks/: _gliner_benchmark.py  basic_task.py  basic_task_transformers.py  classify_text.py  embed_text_transformers.py  extract_custom_schema.py  redact_text.py  redact_text_batch.py  redact_text_gliner_100_call_benchmark.py  redact_text_gliner_cache_benchmark.py  redact_text_gliner_cuda_benchmark.py  sales_call_report.py  summarize_text.py  task_interface.py  video_ad_report.py
examples/workflows/: audio_transcribe.py  batch_processing.py  custom_pipeline.py  embedding_similarity.py  image_ocr_gemma.py  image_ocr_qwen.py  image_understanding_gemma.py  image_understanding_qwen.py  invoice_redact_extract.py  resume_redact_summarize.py  resume_role_match.py  support_transcript_redact_validate.py
src/aibackends/: __init__.py  cli.py  runtimes.py
src/aibackends/backends/: __init__.py
src/aibackends/backends/pii/: __init__.py  openai_privacy.py
src/aibackends/core/: __init__.py  assembler.py  config.py  exceptions.py  logging.py  model_manager.py  model_registry.py  prompting.py  registry.py  types.py
src/aibackends/model_support/: __init__.py  llamacpp.py
src/aibackends/models/: __init__.py  common.py  gemma.py  qwen.py
src/aibackends/schemas/: __init__.py  common.py  embeddings.py  invoice.py  pii.py  sales_call.py  video_ad.py
src/aibackends/steps/: __init__.py  _base.py
src/aibackends/tasks/: __init__.py  _base.py  _gliner_worker.py  _utils.py  analyse_sales_call.py  analyse_video_ad.py  classify.py  embed.py  extract.py  extract_invoice.py  redact_pii.py  registry.py  summarize.py
src/aibackends/workflows/: __init__.py  _base.py  embedding_similarity.py  invoice.py  pii_redactor.py  registry.py  sales_call.py  video_ad.py
tests/: conftest.py  test_cli.py  test_registries.py
tests/runtimes/: test_config.py  test_llamacpp_runtime.py  test_model_resolution.py  test_prompting.py  test_transformers_runtime.py
tests/steps/: test_validator.py
tests/tasks/: test_redact_pii.py  test_text_tasks.py
tests/workflows/: test_embedding_similarity.py  test_pipeline.py
(+15 files in other folders)
